Fixing filters and some spacing. Added drop shadow on mobile filter buttons

--- a/frontend/src/sass/components/cards.scss
+++ b/frontend/src/sass/components/cards.scss
@@ -43,10 +43,11 @@
     width: 100%;
 
     @include media-breakpoint-up(sm) {
-        justify-content: center;
+        justify-content: flex-start;
     }
 
     @include media-breakpoint-up(md) {
+        justify-content: center;
         padding: 2rem;
     }
 
