--- a/frontend/src/sass/components/deals.scss
+++ b/frontend/src/sass/components/deals.scss
@@ -67,7 +67,8 @@
         &.active {
             border-top: 0;
             background: #fff;
-            box-shadow: $box-shadow-sm;
+            // box-shadow: $box-shadow-sm;
+            box-shadow: inset 0 3px 8px -2px rgba(85, 85, 85, 0.5);
         }
         &.dropdown {
             padding: 0;
