--- a/frontend/src/sass/pages/deal-list/filterbar.scss
+++ b/frontend/src/sass/pages/deal-list/filterbar.scss
@@ -4,7 +4,7 @@
     border-bottom: 1px solid $color-section-bottom-border;
     display: none;
     height: $filterbar-height;
-    max-height: $filterbar-height;
+    max-height: none;
     padding: 15px 23px;
 
     @include media-breakpoint-up(md) {
@@ -26,6 +26,7 @@
             display: flex;
             margin-right: 5px;
             overflow-x: auto;
+            flex-wrap: wrap;
         }
 
         .filterbar__filter {
